opa-manager-operator/testing-yamls/ns-webhook/k8srequiredlabels_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsUser == 0
          msg := sprintf("User cannot run as root. runAsUser:: %v", [input.review.object.spec.containers[_].securityContext.runAsUser])
        }
